crates/tesshir/tests/fixtures/check/conflicting_inherited_method.golden
Error: check/conflicting_inherited_method.tess:9:27: conflicting inherited method `read`
