crates/tesshir/tests/fixtures/check/conflicting_inherited_method.tess
interface ReadI32 {
    fn read(self: &Self) -> i32;
}

interface ReadBool {
    fn read(self: &Self) -> bool;
}

interface Both: ReadI32 + ReadBool {}
